--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <title> Geocoder 9000</title>
         <div class ="container">
           <h1>Enter two addresses</h1>
-          This app will calculate the distance between given places and tell you temperature difference. Results will be sent to your e-mail address (optional).<br>
+          This app will calculate the distance between given places and tell you temperature difference. Results will be sent to your e-mail address (currently not functional).<br>
           <p>
           {{warning | safe}}
           <form action="{{url_for('success')}}" method="POST">
